[gd_scene load_steps=3 format=3 uid="uid://statue001"]

[ext_resource type="Script" path="res://scripts/combat/statue_base.gd" id="1_script"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mouse"]
radius = 40.0

[node name="Statue" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_script")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="TierGlow" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.6, 0.6)
modulate = Color(1, 0.9, 0.3, 0.5)

[node name="RangeIndicator" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.3, 0.8, 0.3, 0.3)
z_index = -1

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape2D" parent="AttackRange"]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = true

[node name="AbilityTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -30.0
offset_top = -50.0
offset_right = 30.0
offset_bottom = -42.0
show_percentage = false
value = 100.0

[node name="AbilityReady" type="Sprite2D" parent="."]
visible = false
position = Vector2(25, -25)
scale = Vector2(0.3, 0.3)
modulate = Color(0.3, 1, 0.5, 0.8)

[node name="MouseArea" type="Area2D" parent="."]
input_pickable = true
collision_layer = 0
collision_mask = 0

[node name="MouseCollision" type="CollisionShape2D" parent="MouseArea"]
shape = SubResource("CircleShape2D_mouse")
